log
Sun, May 18, 2025 12:38:39 AM: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
3f0e54c
